@startuml

class utils.ClosedInterval [[java:jprieto.utils.ClosedInterval]] {
	-int min
	-int max
	+ClosedInterval(int min, int max)
	+boolean isIncluded(int value)
	+String toString()
}

abstract class utils.ColorUtils [[java:jprieto.utils.ColorUtils]] {
	+{static}char[] INITIALS
	#Color color
	+ColorUtils(Color color)
	+{static}String allInitials()
	+char getInitial()
	+{static}Color getInstance(char character)
	+{static}Color getNullInstance()
	+{abstract}void write()
}
utils.WithConsoleView <|-- utils.ColorUtils
utils.ColorUtils *-down-> mastermind.types.Color

abstract class utils.Command [[java:jprieto.utils.Command]] {
	#String title
	#Command(String title)
	#{abstract}void execute()
	#{abstract}boolean isActive()
	~String getTitle()
}
utils.WithConsoleView <|-- utils.Command

class utils.Console [[java:jprieto.utils.Console]] {
	+{static}Console console
	-BufferedReader bufferedReader
	+{static}Console instance()
	+String readString(String title)
	+String readString()
	+int readInt(String title)
	+char readChar(String title)
	+void writeln()
	+void write(String string)
	+void write(int integer)
	+void writeln(String string)
	+void writeln(int integer)
	+void write(char character)
	+void writeError(String format)
}
utils.Console ..> java.io.BufferedReader
utils.Console ..> java.io.InputStreamReader

abstract class utils.Menu [[java:jprieto.utils.Menu]] {
	-{static}String OPTION
	-List<Command> commandList
	+Menu()
	+void execute()
	#void addCommand(Command command)
}
utils.WithConsoleView <|-- utils.Menu
utils.Menu *-down-> utils.Command
utils.Menu ..> java.util.ArrayList

class utils.TCPIP [[java:jprieto.utils.TCPIP]] {
	-ServerSocket serverSocket
	-Socket socket
	-PrintWriter out
	-BufferedReader in
	+TCPIP(Socket socket)
	+TCPIP(ServerSocket serverSocket, Socket socket)
	+{static}TCPIP createClientSocket()
	+{static}TCPIP createServerSocket()
	+void send(String value)
	+void send(int value)
	+void send(boolean value)
	+void send(char value)
	+String receiveLine()
	+boolean receiveBoolean()
	+int receiveInt()
	+char receiveChar()
	+void close()
}
utils.TCPIP *-down-> java.io.BufferedReader
utils.TCPIP ..> java.io.IOException
utils.TCPIP ..> java.io.InputStreamReader
utils.TCPIP *-down-> java.io.PrintWriter
utils.TCPIP *-down-> java.net.ServerSocket
utils.TCPIP *-down-> java.net.Socket

abstract class utils.WithConsoleView [[java:jprieto.utils.WithConsoleView]] {
	#Console console
	#WithConsoleView()
}
utils.WithConsoleView *-down-> utils.Console

class utils.YesNoDialog [[java:jprieto.utils.YesNoDialog]] {
	-{static}char AFIRMATIVE
	-{static}char NEGATIVE
	-{static}String QUESTION
	-{static}String MESSAGE
	+boolean read(String title)
	-{static}boolean isAfirmative(char answer)
	-{static}boolean isNegative(char answer)
}
utils.WithConsoleView <|-- utils.YesNoDialog

@enduml